[package]
name = "rust-tcp-tutorial"
version = "0.1.0"
authors = ["yanick <github@yanick.site>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.26.0"
hex = "0.4.2"
byteorder = "1.3.4"
lazy_static = "1.4.0"
rand = "0.7.3"